--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@radix-ui/react-dialog": "^1.1.8",
     "@radix-ui/react-navigation-menu": "^1.2.7",
     "@radix-ui/react-separator": "^1.1.4",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.314.0",
     "react": "^18.2.0",
