--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.314.0",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
@@ -36,6 +37,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.30.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
