--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,11 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "exclude": [ 
+    "src/components/ui/avatar.tsx",
+    "src/components/ui/chart.tsx",
+    "src/components/ui/command.tsx",
+    "src/components/ui/sidebar.tsx"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
